k8s-ingress/myapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp-pod
  template:
    metadata:
      labels:
        app: myapp-pod
    spec:
      containers:
        - name: myapp-container
          image: phanngoccanh/spring-cicd:latest
          ports:
            - containerPort: 8080
              name: pod-http
          resources:
            requests:
              memory: "64Mi"
              cpu: "64m"
            limits:
              memory: "128Mi"
              cpu: "128m"

---
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
spec:
  type: ClusterIP
  ports:
    - name: svc-http
      protocol: TCP
      port: 8000
      targetPort: pod-http
  selector:
    app: myapp-pod
