k8s-ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  # ingressClassName: nginx # Nếu bạn không muốn dùng annotations
  tls:
    - hosts:
      - e24857.learnk8s.jamesisme.com
      secretName: todo-tls
  rules:
    - host: e24857.learnk8s.jamesisme.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: myapp-svc
                port:
                  name: svc-http
